author admin -> vokimon

--- a/content/2014-01-08-09:07-fiare-despega.md
+++ b/content/2014-01-08-09:07-fiare-despega.md
@@ -1,6 +1,6 @@
 Title: Fiare despega
 Date: 2014-01-08 09:07
-Author: admin
+Author: vokimon
 Category: Ahorro, Banca, Bilbo, España, Euskadi, Financiacion
 Slug: fiare-despega
 Status: published
