all post reviewed to show properly

--- a/content/articles/2014-01-08-09:07-fiare-despega.md
+++ b/content/articles/2014-01-08-09:07-fiare-despega.md
@@ -5,7 +5,15 @@ Category: Ahorro, Banca, Bilbo, España, Euskadi, Financiacion
 Slug: fiare-despega
 Status: published
 
-\[caption id="" align="alignright" width="200"\][![Peru Sasia](http://www.economiasolidaria.org/files/imagecache/image_node/Peru_Sasia.png){width="200" height="198"}](http://www.economiasolidaria.org/files/imagecache/image_node/Peru_Sasia.png) Peru Sasia\[/caption\]
+<figure style='float:right; max-width:30%'>
+<a href="https://www.economiasolidaria.org/sites/default/files/styles/large/public/news/images/Peru_Sasia.png">
+<img src="https://www.economiasolidaria.org/sites/default/files/styles/large/public/news/images/Peru_Sasia.png" width=90% />
+<figcaption style='text-align:center'>
+Peru Sasia, Consejero de Banca Ética
+</figcaption>
+</a>
+</figure>
+
 
 Fiare, arranca este año finalmente como cooperativa de crédito con operativa corriente y en septiembre tendrán una oficina en Bilbo.
 
