--- a/content/articles/2014-01-08-09:07-fiare-despega.md
+++ b/content/articles/2014-01-08-09:07-fiare-despega.md
@@ -1,7 +1,9 @@
 Title: Fiare despega
 Date: 2014-01-08 09:07
 Author: vokimon
-Category: Ahorro, Banca, Bilbo, España, Euskadi, Financiacion
+Category: Ahorro, Banca, Financiación
+Locations: Bilbo, España, Euskadi
+Tags: Fiare
 Slug: fiare-despega
 Status: published
 
