--- a/content/articles/2014-01-08-09:07-fiare-despega.md
+++ b/content/articles/2014-01-08-09:07-fiare-despega.md
@@ -7,14 +7,10 @@ Tags: Fiare
 Slug: fiare-despega
 Status: published
 
-<figure style='float:right; max-width:30%'>
-<a href="https://www.economiasolidaria.org/sites/default/files/styles/large/public/news/images/Peru_Sasia.png">
-<img src="https://www.economiasolidaria.org/sites/default/files/styles/large/public/news/images/Peru_Sasia.png" width=90% />
-<figcaption style='text-align:center'>
-Peru Sasia, Consejero de Banca Ética
-</figcaption>
-</a>
-</figure>
+::: categories
+
+::: figure style="float:right; max-width:30%" https://www.economiasolidaria.org/sites/default/files/styles/large/public/news/images/Peru_Sasia.png
+	Peru Sasia, Consejero de Banca Ética
 
 
 Fiare, arranca este año finalmente como cooperativa de crédito con operativa corriente y en septiembre tendrán una oficina en Bilbo.
