explicit summary and image when wrong ones shown

--- a/content/articles/2014-01-08-09:07-fiare-despega.md
+++ b/content/articles/2014-01-08-09:07-fiare-despega.md
@@ -6,6 +6,7 @@ Locations: Bilbo, España, Euskadi
 Tags: Fiare
 Slug: fiare-despega
 Status: published
+Summary: Fiare, arranca este año finalmente como cooperativa de crédito con operativa corriente y en septiembre tendrán una oficina en Bilbo.
 
 ::: categories
 
