more figures fixed

--- a/content/articles/2014-01-08-09:07-fiare-despega.md
+++ b/content/articles/2014-01-08-09:07-fiare-despega.md
@@ -10,7 +10,7 @@ Summary: Fiare, arranca este año finalmente como cooperativa de crédito con op
 
 ::: categories
 
-::: figure style="float:right; max-width:30%" https://www.economiasolidaria.org/sites/default/files/styles/large/public/news/images/Peru_Sasia.png
+::: figure https://www.economiasolidaria.org/sites/default/files/styles/large/public/news/images/Peru_Sasia.png right
 	Peru Sasia, Consejero de Banca Ética
 
 
