yaml tags are lists

--- a/content/articles/2014-01-08-09:07-fiare-despega.md
+++ b/content/articles/2014-01-08-09:07-fiare-despega.md
@@ -4,7 +4,8 @@ date: 2014-01-08 09:07
 author: vokimon
 category: Ahorro, Banca, Financiación
 locations: Bilbo, España, Euskadi
-tags: Fiare
+tags:
+- Fiare
 slug: fiare-despega
 status: published
 summary: Fiare, arranca este año finalmente como cooperativa de crédito con operativa corriente y en septiembre tendrán una oficina en Bilbo.
