--- a/content/articles/microblog/2015-11-21-234957-twitter.md
+++ b/content/articles/microblog/2015-11-21-234957-twitter.md
@@ -1,5 +1,5 @@
 ---
-title: Twitter
+title: III Jornades d'ecologia i cooperacio de Sant Feliu
 date: &id001 2015-11-21 23:49:57+00:00
 status: published
 original:
@@ -36,6 +36,6 @@ author: vokimon
 ---
 III Jornades d'ecologia i cooperacio de Sant Feliu: @[1506663746223032:274:Fiare Banca Ética y Ciudadana], @[166298163419130:274:Som Energia], Eticom @[164701843694466:274:Som Connexió], @[389365854524441:274:Guifibaix]/@[138823872798349:274:Guifi.net], @[837856519666554:274:Coop57]...
 
-:::linkcard https://twitter.com/promoecosf/status/667995101122162688 image="None" title='Twitter'
+:::twitter promoecosf 667995101122162688
 
 
