reviewed microblog from 2016-2017

--- a/content/articles/microblog/2016-07-01-184558-som-energia.md
+++ b/content/articles/microblog/2016-07-01-184558-som-energia.md
@@ -1,5 +1,5 @@
 ---
-title: Som Energia
+title: Gas Natural demanda al estado por expulsar sus centrales del mercado
 date: &id001 2016-07-01 18:45:58+00:00
 status: published
 original:
@@ -19,7 +19,10 @@ original:
     una demanda por responsabilidad patrimonial contra el Estado (o sea, tú también)
     “por el impacto que ha tenido en su cuenta de...
 tags:
-- untagged
+- Salvador Gabarró
+- Rafael Villaseca
+- Gas Natural
+- nacionalización de perdidas
 category: ''
 location: España
 author: vokimon
@@ -27,6 +30,17 @@ author: vokimon
 ---
 Una de gas.
 
-:::linkcard https://www.facebook.com/somenergia/posts/1043506992364905 image="https://external-mad1-1.xx.fbcdn.net/safe_image.php?d=AQAnSFw-LDWoJhNZ&w=200&h=200&url=http%3A%2F%2Fcdnb.20m.es%2Fsites%2F147%2F2016%2F06%2F6035273572_b523691518_z-300x200.jpg&cfs=1&_nc_hash=AQBspaqB-GUaFTNn" title='Som Energia'
-    ¿¡Qué!? ¿Que una gran compañia de gas con abundantes beneficios presenta una demanda por responsabilidad patrimonial contra el Estado (o sea, tú también) “por el impacto que ha tenido en su cuenta de...
+Som Energia se queja [en su perfil de Facebook](https://www.facebook.com/somenergia/posts/1043506992364905)
+de que Gas Natural ha emprendido una demanda contra el estado
+por expulsar sus centrales electricas basadas en gas
+en favor de las renovables por el impacto que ha tenido en sus cuentas de resultados,
+aún muy en positivo.
+
+> ¿¡Qué!? ¿Que una gran compañia de gas con abundantes beneficios
+> presenta una demanda por responsabilidad patrimonial contra el Estado
+> (o sea, tú también) “por el impacto que ha tenido en su cuenta de...
+
+Lo han leido en esta noticia:
+
+:::linkcard https://blogs.20minutos.es/la-energia-como-derecho/2016/06/20/la-insaciable-codicia-de-los-senores-del-gas/ image=https://cdnb.20m.es/sites/147/2016/06/6035273572_b523691518_z-300x200.jpg
 
