--- a/content/articles/microblog/2016-08-07-094522-som-energia.md
+++ b/content/articles/microblog/2016-08-07-094522-som-energia.md
@@ -1,5 +1,5 @@
 ---
-title: Som Energia
+title: Generation kWh, la autoproducción colectiva de Som Energía
 date: &id001 2016-08-07 09:45:22+00:00
 status: published
 original:
@@ -23,14 +23,29 @@ original:
 
     ¿Todavía no conoces www.generationkwh.org? ¡Energía renovable a precio de coste!'
 tags:
-- untagged
-category: ''
+- Som Energia
+- renovables
+category: Electricidad
 location: España
 author: vokimon
 
 ---
-Autoproduccion colectiva en SomEnergia: Ya se han asolido los 2M€ necesarios para financiar directamente por los socios la planta fotovoltaica de Alcolea del Rio (Sevilla) que esa operativa desde Abril. Comienzan a sumar para el siguiente proyecto, el molino eolico.
+Autoproduccion colectiva en SomEnergia:
+Ya se han asolido los 2M€ necesarios para financiar directamente por los socios la planta fotovoltaica de Alcolea del Rio (Sevilla) que esa operativa desde Abril.
+Comienzan a sumar para el siguiente proyecto, el molino eolico.
 
-:::linkcard https://www.facebook.com/somenergia/posts/1065970630118541 image="https://external-mad1-1.xx.fbcdn.net/safe_image.php?d=AQBqpDTBY2sga1ug&w=339&h=339&url=fbstaging%3A%2F%2Fgraph.facebook.com%2Fstaging_resources%2FMDExMDY1OTY5MzA2Nzg1MzQwOjE2MTkwODM2ODk%3D&cfs=1&_nc_hash=AQCy-3vsbqtCkDU7" title='Som Energia'
-    Otra forma de autoconsumir #renovables: colectivamente con la #cooperativa.        ¿Todavía no conoces www.generationkwh.org? ¡Energía renovable a precio de coste!
+El proyecto [Generation kWh](https://generationkwh.org) de Som Energia
+evita las trabas a la autoproducción
+con un modelo de autoproducción renovable,
+en el que los socios interesados aportan el dinero
+y a cambio, en vez de intereses reciben la parte
+proporcional de los kWh producidos a precio de coste.
+
+Parece que la idea ha atraido mucho a las socias de la cooperativa.
+En un tiempo record se ha asolido la inversión requerida
+para la segunda planta, y algunas de ellas se han quedado fuera.
+
+:::linkcard https://www.energias-renovables.com/fotovoltaica/otra-manera-de-autoconsumir-20160805 image=https://www.energias-renovables.com/ficheroenergias/fotos/fotovoltaica/ampliada/g/gkwh.jpg
+    Otra forma de autoconsumir #renovables: colectivamente con la #cooperativa.
+    ¿Todavía no conoces www.generationkwh.org? ¡Energía renovable a precio de coste!
 
