--- a/content/articles/microblog/2016-08-15-110538-facebook.md
+++ b/content/articles/microblog/2016-08-15-110538-facebook.md
@@ -1,5 +1,5 @@
 ---
-title: Facebook
+title: La mejor obra social
 date: &id001 2016-08-15 11:05:38+00:00
 status: published
 original:
@@ -16,14 +16,16 @@ original:
   siteurl: https://www.facebook.com
   description: ''
 tags:
-- untagged
-category: ''
+- La Caixa
+- deshaucios
+- obra social
+category: Banca, Ahorro, Financiación
 location: España
 author: vokimon
 
 ---
 
-
-:::linkcard https://www.facebook.com/picsllyli/photos/a.555288134528693/908714552519381/?type=3&theater image="None" title='Facebook'
+:::figure https://scontent.fbcn8-2.fna.fbcdn.net/v/t1.0-9/10432149_908714552519381_8676756575794493984_n.jpg?_nc_cat=109&ccb=2&_nc_sid=ba80b0&_nc_ohc=gsphaGjJiY8AX9zfgRD&_nc_ht=scontent.fbcn8-2.fna&oh=4e109d1dbc45d2a654bab0f0d8ad05e7&oe=603C670B
+	Via [Picsllyli](https://www.facebook.com/picsllyli/photos/a.555288134528693/908714552519381/?type=3&theater) en Facebook
 
 
