--- a/content/articles/microblog/2016-08-24-160823-som-connexio.md
+++ b/content/articles/microblog/2016-08-24-160823-som-connexio.md
@@ -1,5 +1,5 @@
 ---
-title: Som Connexió
+title: 3 Motivos para pasar a Som Connexió en agosto
 date: &id001 2016-08-24 16:08:23+00:00
 status: published
 original:
@@ -20,14 +20,15 @@ original:
 
     Te damos 5 razones para formar parte de nuestra cooperativa...'
 tags:
-- untagged
-category: ''
+- Som Connexio
+category: Telecomunicaciones
 location: España
 author: vokimon
 
 ---
-Ja som (mes de) 2.000 connexions. 5 motius per fer el salt.
+Ja somos (más de) 2.000 conexiones.
+Som Connexió te da 5 motivos para pasarte justo en este agosto.
 
-:::linkcard https://www.facebook.com/somconnexio/posts/643307799167199 image="https://external-mad1-1.xx.fbcdn.net/safe_image.php?d=AQAYVv9bUi_Cd4t2&w=300&h=300&url=https%3A%2F%2Feticom.coop%2Fwp-content%2Fuploads%2F2016%2F08%2FUntitled-design-300x300.jpg&cfs=1&_nc_hash=AQBR-BDC4Hds-JfQ" title='Som Connexió'
+:::linkcard https://somosconexion.coop/14986/
     Sabes por qué hacer el cambio de compañía de telefonía móvil y pasarte a Eticom Somos Conexión durante el mes de agosto es una buena idea?    Te damos 5 razones para formar parte de nuestra cooperativa...
 
