--- a/content/articles/microblog/2016-09-08-105823-403-forbidden.md
+++ b/content/articles/microblog/2016-09-08-105823-403-forbidden.md
@@ -1,5 +1,5 @@
 ---
-title: 403 Forbidden
+title: El Corte Inglés mantiene en plantilla a un responsable que llamaba 'chochitos' a sus subordinadas
 date: &id001 2016-09-08 10:58:23+00:00
 status: published
 original:
@@ -21,14 +21,21 @@ original:
   siteurl: https://iniciativadebate.org
   description: ''
 tags:
-- untagged
-category: ''
+- Corte Inglés
+- sexismo
+- acoso laboral
+- control mediatico
+category: Ropa, Medios, Prensa, Televisión
 location: España
 author: vokimon
 
 ---
-Como das las noticias cuando no quieres afectar a unos grandes almacenes sin nombre
+Como das las noticias cuando no quieres afectar a unos grandes almacenes sin nombre.
 
-:::linkcard https://iniciativadebate.org/2016/09/06/el-chochitos-no-trabaja-para-unos-grandes-almacenes-sin-nombre/ image="None" title='403 Forbidden'
-
+Como destaca el blog [Iniciativa Debate](https://iniciativadebate.org/2016/09/06/el-chochitos-no-trabaja-para-unos-grandes-almacenes-sin-nombre/)
+muchos medios han criticado con razón la sentencia judicial
+que absuelve al responsable
+diciendo que no es delito denigrar a las subordinadas de esa manera.
+Sin embargo pocos medios han tenido el valor de mencionar siquiera
+a la empresa que ha mantenido a dicho responsable en su puesto: El Corte Inglés.
 
