--- a/content/articles/microblog/2016-10-24-234825-403-forbidden.md
+++ b/content/articles/microblog/2016-10-24-234825-403-forbidden.md
@@ -1,5 +1,5 @@
 ---
-title: 403 - Forbidden
+title: La BBC desvela que refugiados sirios trabajan para proveedores de Mango y Zara
 date: &id001 2016-10-24 23:48:25+00:00
 status: published
 original:
@@ -17,14 +17,14 @@ original:
   siteurl: https://www.huffingtonpost.es
   description: ''
 tags:
-- untagged
-category: ''
+- explotación laboral
+category: Ropa
 location: España
 author: vokimon
 
 ---
-Ibex35 wellcome
+IBEX35 wellcome
 
-:::linkcard https://www.huffingtonpost.es/entry/12617118 image="None" title='403 - Forbidden'
+:::linkcard https://www.huffingtonpost.es/entry/12617118 title="La BBC desvela que refugiados sirios trabajan para proveedores de Mango y Zara" image=https://img.huffingtonpost.com/asset/5c8aa18f360000e01c6bbf36.jpeg?ops=scalefit_630_noupscale
 
 
