--- a/content/articles/microblog/2016-11-20-213745-pablo-iglesias.md
+++ b/content/articles/microblog/2016-11-20-213745-pablo-iglesias.md
@@ -1,5 +1,5 @@
 ---
-title: Pablo Iglesias
+title: El Malvado IBEX, José María Abad
 date: &id001 2016-11-20 21:37:45+00:00
 status: published
 original:
@@ -21,14 +21,14 @@ original:
   description: 'Del piso de Espinar lo supimos todo; de quien paga el alquiler de
     la casa de Cebrián no he visto nada en prensa ni en televisión. Lean:'
 tags:
-- untagged
-category: ''
+- puertas giratorias
+- plutocracia
+category: Campaña
 location: España
 author: vokimon
 
 ---
-El Malvado IBEX, Jose García Abad
+El Malvado IBEX, libro de Jose García Abad
 
-:::linkcard https://www.facebook.com/IglesiasTurrionPablo/posts/1275932649145805 image="https://scontent-mad1-1.xx.fbcdn.net/v/t1.0-9/15109353_1275932582479145_4489031800113700343_n.jpg?_nc_cat=110&_nc_sid=110474&_nc_ohc=uO2YnQt9PHcAX-5xR1p&_nc_ht=scontent-mad1-1.xx&oh=d82ac26bac174f977abd5af6689451fe&oe=5F559860" title='Pablo Iglesias'
-    Del piso de Espinar lo supimos todo; de quien paga el alquiler de la casa de Cebrián no he visto nada en prensa ni en televisión. Lean:
+:::linkcard https://www.publico.es/economia/jose-garcia-abad-malvado-ibex.html
 
