--- a/content/articles/microblog/2017-03-14-051820-trama-que-trama.md
+++ b/content/articles/microblog/2017-03-14-051820-trama-que-trama.md
@@ -22,14 +22,21 @@ original:
     sabía bien lo que decía porque conoce bien nuestro objetivo: desarticular la trama
     para tener un país más justo y democrático.'
 tags:
-- untagged
-category: ''
+- Rubén Juste
+- Pablo Iglesias
+- plutocracia
+category: Campaña
 location: España
 author: vokimon
-
 ---
-Pablo Iglesias hace un breve resumen del libro "Ibex 35. Una historia herética del poder en España" de Rubén Juste. El libro recopila informacion de como las grandes empresas se entraman con el poder politico para ejercer el poder real en España.
+
+Pablo Iglesias hace un breve resumen del libro "Ibex 35.
+Una historia herética del poder en España" de Rubén Juste.
+El libro recopila informacion de como las grandes empresas se entraman con el poder politico para ejercer el poder real en España.
 
 :::linkcard https://www.eldiario.es/tribunaabierta/Trama-trama_6_621597851.html image="https://static.eldiario.es/clip/b5b71b92-6f2a-4100-a57a-d49a49ad272f_facebook-aspect-ratio_default_0.jpg" title='¿Trama? ¿Qué trama?'
-    El Marqués de Villar Mir, en su despedida de la presidencia de OHL, declaraba: “Podemos no cabe en un gobierno, sería un desastre”. El neomarqués sabía bien lo que decía porque conoce bien nuestro objetivo: desarticular la trama para tener un país más justo y democrático.
+    El Marqués de Villar Mir, en su despedida de la presidencia de OHL,
+    declaraba: “Podemos no cabe en un gobierno, sería un desastre”.
+    El neomarqués sabía bien lo que decía porque conoce bien nuestro objetivo:
+    desarticular la trama para tener un país más justo y democrático.
 
