--- a/content/articles/microblog/2017-04-10-074713-setem-catalunya.md
+++ b/content/articles/microblog/2017-04-10-074713-setem-catalunya.md
@@ -1,5 +1,5 @@
 ---
-title: SETEM Catalunya
+title: Banca Armada protesta en la asamblea de accionistas del Banco Santander
 date: &id001 2017-04-10 07:47:13+00:00
 status: published
 original:
@@ -19,14 +19,26 @@ original:
     anuals d'accionistes dels principals bancs estatals per denunciar les seves inversions
     en armes. Ho hem fet concretament amb...
 tags:
-- untagged
-category: ''
+- Setem
+- banca armada
+category: Banca, Ahorro, Financiación
 location: España
 author: vokimon
-
+image: http://www.setem.org/media/images/original/INFOGRAFIA_Santander_CAT_low.jpg
 ---
-Banca de sangre. Que es lo que se hace con tu dinero? Tu dinero no es inoquo.
+Banca de sangre:
+¿Qué es lo que se hace con tu dinero?
+Si está en los grandes bancos,
+tu dinero no es inoquo,
+se usa para financiar empresas armamentísticas.
 
-:::linkcard https://www.facebook.com/setemcatalunya/photos/a.151460889628/10155184670339629/ image="https://scontent-mad1-1.xx.fbcdn.net/v/t31.0-8/17834084_10155184670339629_6422241956669595384_o.jpg?_nc_cat=108&_nc_sid=2d5d41&_nc_ohc=X3EUVJYemX4AX-P_3L9&_nc_ht=scontent-mad1-1.xx&oh=04383d451a5a7fa6ec57ce4f6998d9cc&oe=5F585762" title='SETEM Catalunya'
-    Aquesta setmana hem acabat la nostra roda de participacions a les juntes anuals d'accionistes dels principals bancs estatals per denunciar les seves inversions en armes. Ho hem fet concretament amb...
+Durante la asamblea de accionistas del Banco de Santander,
+la campaña [Banca armada](https://bancaarmada.org)
+denuncia sus inversiones en industria militar y de armamento.
+
+Publican esta ilustrativa infografía:
+
+:::figure http://www.setem.org/media/images/original/INFOGRAFIA_Santander_CAT_low.jpg
+
+Más información en el [blog de Setem](http://www.setem.org/blog/es/catalunya/miembros-de-la-campana-banca-armada-hacen-denuncian-en-la-junta-de-accionistas-del-santander)
 
