--- a/content/articles/microblog/2016-12-06-233057-som-energia.md
+++ b/content/articles/microblog/2016-12-06-233057-som-energia.md
@@ -1,5 +1,5 @@
 ---
-title: Som Energia
+title: Som Energia llega a los 29.000 socios y 40.000 contratos
 date: &id001 2016-12-06 23:30:57+00:00
 status: published
 original:
@@ -22,14 +22,14 @@ original:
     ¿Llegaremos a 30.000 antes de acabar el año? ¡Da el salto ahora! Si aún no lo
     eres, ven por aquí  ===>...'
 tags:
-- untagged
-category: ''
+- Som Energia
+category: Electricidad
 location: España
 author: vokimon
 
 ---
 29.000 socios, más de 40.000 contratos. ¿Aún no te has pasado?
 
-:::linkcard https://www.facebook.com/somenergia/posts/1170569219658681 image="https://scontent-mad1-1.xx.fbcdn.net/v/t1.0-9/15391062_1170566952992241_3826322173956355384_n.jpg?_nc_cat=105&_nc_sid=8024bb&_nc_ohc=RZEwjVNvqP8AX8jPgWT&_nc_oc=AQl5zzR0RdTNwsmwMbKPnBAghyUTi0obM-LNEwxcnXTpnz6zupCUpDqfJsVakgvoVVQ&_nc_ht=scontent-mad1-1.xx&oh=e3b9c1d6817b94e9b47b90dd4f368b45&oe=5F57A6B3" title='Som Energia'
+:::linkcard https://www.facebook.com/somenergia/posts/1170569219658681 image="/uploads/2016/12/somenergia-40mil-contractes.jpg" title='Som Energia - ¡Hemos llegdo a los  40.000 contractos!'
     ¡En 6 años ya #Som29000 socios y socias que queremos energía renovable y cooperativa!        ¿Llegaremos a 30.000 antes de acabar el año? ¡Da el salto ahora! Si aún no lo eres, ven por aquí  ===>...
 
