--- a/content/articles/microblog/2017-01-31-075235-balanc-social-xes-2018.md
+++ b/content/articles/microblog/2017-01-31-075235-balanc-social-xes-2018.md
@@ -1,5 +1,5 @@
 ---
-title: Seryes
+title: "Seryes: ¿Cuál es la diferencia de un seguro ético?"
 date: &id001 2017-01-31 07:52:35+00:00
 status: published
 original:
@@ -19,14 +19,20 @@ original:
     ético, recuperamos el valor mutualista del seguro, como un mecanismo de solidaridad
     entre los integrantes de una comunidad, que...
 tags:
-- untagged
-category: ''
+- seguros éticos
+- mutualismo
+- Seryes
+- Arç
+- Atlantis
+category: Seguros
 location: España
 author: vokimon
-
+image: https://scontent.fbcn8-2.fna.fbcdn.net/v/t1.0-9/16195123_730732153759440_422908547269945872_n.jpg
 ---
 Seguros? Arç, Atlantis, Seryes...
 
-:::linkcard https://www.facebook.com/SeryesSA/photos/a.162297557269572/730732153759440/?type=3&eid=ARCDGv3xbJNdNq1F1zHZ3npvndQ-tAjrveSUT916VPQY5vkDb91ZlNMiP5ipWu-QlS_MLg2Bc_ORkFG-&__tn__=EHH-R image="https://scontent-mad1-1.xx.fbcdn.net/v/t1.0-9/16195123_730732153759440_422908547269945872_n.jpg?_nc_cat=101&_nc_sid=2d5d41&_nc_ohc=tFfARnCb0zkAX-gTtwB&_nc_ht=scontent-mad1-1.xx&oh=5a5eaba487dea9484df88c631a644269&oe=5F55F850" title='Seryes'
-    ¿Sabes qué diferencia un seguro ético de uno tradicional? En el seguro ético, recuperamos el valor mutualista del seguro, como un mecanismo de solidaridad entre los integrantes de una comunidad, que...
+:::linkcard https://www.facebook.com/SeryesSA/photos/a.162297557269572/730732153759440/?type=3&eid=ARCDGv3xbJNdNq1F1zHZ3npvndQ-tAjrveSUT916VPQY5vkDb91ZlNMiP5ipWu-QlS_MLg2Bc_ORkFG-&__tn__=EHH-R image="https://scontent-mad1-1.xx.fbcdn.net/v/t1.0-9/16195123_730732153759440_422908547269945872_n.jpg?_nc_cat=101&_nc_sid=2d5d41&_nc_ohc=tFfARnCb0zkAX-gTtwB&_nc_ht=scontent-mad1-1.xx&oh=5a5eaba487dea9484df88c631a644269&oe=5F55F850" title='Seryes' image=https://scontent.fbcn8-2.fna.fbcdn.net/v/t1.0-9/16195123_730732153759440_422908547269945872_n.jpg
+    ¿Sabes qué diferencia un seguro ético de uno tradicional?
+    En el seguro ético, recuperamos el valor mutualista del seguro,
+    como un mecanismo de solidaridad entre los integrantes de una comunidad, que...
 
