tageados los microblogs restantes

--- a/content/articles/microblog/2015-11-21-234957-fira-sant-feliu.md
+++ b/content/articles/microblog/2015-11-21-234957-fira-sant-feliu.md
@@ -28,13 +28,21 @@ original:
   siteurl: https://twitter.com
   description: ''
 tags:
-- untagged
-category: ''
+- GuifiBaix
+- Som Energia
+- Som Connexió
+- Coop57
+- Fiare
+category: Banca, Telecomunicaciones, Electricidad, Ahorro, Financiación
 location: España
 author: vokimon
 
 ---
-III Jornades d'ecologia i cooperacio de Sant Feliu: @[1506663746223032:274:Fiare Banca Ética y Ciudadana], @[166298163419130:274:Som Energia], Eticom @[164701843694466:274:Som Connexió], @[389365854524441:274:Guifibaix]/@[138823872798349:274:Guifi.net], @[837856519666554:274:Coop57]...
+Este fin de semana se celebraron en Sant Feliu de Llobregat (Barcelona) las _III Jornades d'ecologia i cooperacio_.
+Se hizo un stand conjunto de los colectivos:
+Fiare Banca Ética y Ciudadana, Som Energia, Eticom Som Connexió, Guifibaix, Coop57...
+
+:::figure /uploads/2015/11/iii-jornades-ecologia-i-cooperacio-santfeliu.jpg
 
 :::twitter promoecosf 667995101122162688
 
