--- a/content/articles/microblog/2015-11-21-234957-fira-sant-feliu.md
+++ b/content/articles/microblog/2015-11-21-234957-fira-sant-feliu.md
@@ -33,7 +33,7 @@ tags:
 - Som Connexió
 - Coop57
 - Fiare
-category: Banca, Telecomunicaciones, Electricidad, Ahorro, Financiación
+category: Banca, Telecomunicaciones, Energía, Ahorro, Financiación
 location: España
 author: vokimon
 
