--- a/content/articles/microblog/2016-07-01-184558-som-energia.md
+++ b/content/articles/microblog/2016-07-01-184558-som-energia.md
@@ -23,7 +23,7 @@ tags:
 - Rafael Villaseca
 - Gas Natural
 - nacionalización de perdidas
-category: Electricidad
+category: Energía
 location: España
 author: vokimon
 
