--- a/content/articles/microblog/2016-12-06-233057-som-energia.md
+++ b/content/articles/microblog/2016-12-06-233057-som-energia.md
@@ -23,7 +23,7 @@ original:
     eres, ven por aquí  ===>...'
 tags:
 - Som Energia
-category: Electricidad
+category: Energía
 location: España
 author: vokimon
 
