queviure: forgotten links and data

--- a/content/articles/2021-03-28-queviure.md
+++ b/content/articles/2021-03-28-queviure.md
@@ -169,7 +169,7 @@ es también un paso en esa dirección.
 
 ## Para ampliar información sobre el tema
 
-- [Opcions: Entrevista a Diana Amigò (QuèViure/Economat Social) y Alejandro Guzman ()](https://opcions.org/es/entrevistas/diana-amigo-alejandro-guzman/)
+- [Opcions: Entrevista a Diana Amigò (QuèViure/Economat Social) y Alejandro Guzman (Ecocentral)](https://opcions.org/es/entrevistas/diana-amigo-alejandro-guzman/)
 - [Opcions: La receta de los supermercados cooperativos](https://opcions.org/es/consumo/supermercados-cooperativos/)
 - [Directa: Entrevista Nuria Vega y Ricard Espelt](https://directa.cat/el-moviment-agroecologic-te-una-clara-voluntat-de-transformacio-social-quan-consumeixes-fas-politica/)
 - [El Punt Avui: El primer supermercat agroecològic cooperatiu d'Olot]()
@@ -194,7 +194,7 @@ No sólo grupos de consumo, también, tiendas, restaurantes, cocinas...
 
 - [L'Economat Social](http://leconomat.queviure.cat/ca/)
   (Supermercado cooperativo de Sants, Barcelona)
-- [Fleca L'Aresta]()
+- [Fleca L'Aresta](https://aresta.coop/fleca/)
   (Panaderia cooperativa, Santa Coloma de Queralt)
 - [Menjador Ca La Rosa](https://menjadorcalarosa.cat/)
   (Cooperativa de cocina agroecológica, menús escolares, catering...)
