--- a/content/articles/2021-03-28-queviure.md
+++ b/content/articles/2021-03-28-queviure.md
@@ -50,7 +50,7 @@ De momento, solo unas pocas
 de la [larga lista de proveedoras](https://www.queviure.cat/productores/)
 han dado ese paso.
 
-## Hegemonía o desastre ecológico y social
+## Universalidad o desastre ecológico y social
 
 Más allá del aspecto práctico,
 quizás, lo más interesante de esta cooperativa sea
