--- a/content/articles/2021-03-28-queviure.md
+++ b/content/articles/2021-03-28-queviure.md
@@ -29,10 +29,10 @@ Veamos cómo funciona.
 
 ## En qué consiste
 
-Se creó en 2013.
+Se creó en 2013 en Barcelona, con sede en Hospitalet.
 Su nombre es una [juego de palabras][alofonía] en catalán que mezcla
 _queviure_ (víveres) y _què viure_ (qué vivir).
-Se tŕáta de una **cooperativa** de segundo grado, **sin ánimo de lucro**,
+Se trata de una **cooperativa** de segundo grado, **sin ánimo de lucro**,
 con tres tipos de miembros:
 
 - Las **entidades consumidoras** (como socias de consumo)
@@ -84,21 +84,26 @@ Como dicen Nuria Vega y Ricard Espelt en esta [entrevista en La Directa](https:/
 > la integración en el territorio,
 > la biodiversidad...
 
-Los motivos para no participar en un grupo de consumo diría que son:
+Los motivos que normalmente se dan para no participar en un grupo de consumo suelen ser:
 
 - **Conveniencia:** Tener que adaptar el consumo al ciclo de pedidos y a la capacidad del grupo de agregar demanda para hacerlos
-- **Precios:** Demasiado altos para atraer a las clases populares
+- **Precios:** Demasiado altos para atraer a las clases más populares
 - **Dedicación:** No todo el mundo puede o quiere dedicar tiempo libre a gestionar el grupo de consumo
 - **Surtido:** No todos los productos que se consumen están disponibles en el grupo y, si para algunas cosas tienes que ir al super, ya lo compras todo
 
 Por eso, están surgiendo este tipo de iniciativas que plantean
 por un lado, la agregación de la demanda
 para tener surtido y rebajar los costes de distribución: 
-QuèViure, [Biomarket]...
+QuèViure, [EcoCentral], [Biomarket]...
 Por otro lado, la semi-profesionalización minorista
 como forma más conveniente de llegar a la gente:
 L'[Economat Social] de Sants, [FoodCoop] de l'Eixample, [La Magrana Vallesana] de Granollers, [L'Artiga] de Olot...
+También se replantean fórmulas que juntan la oferta
+minorista, ya sea
+físicamente como el futuro [centro comercial de la Economía Social en la antigua cárcel La Modelo](https://opcions.org/es/opinion/centros-comerciales/),
+o via plataforma virtual como el [Mercat Social](https://www.elmercatsocial.cat/quisom).
 
+[EcoCentral]: https://www.ecocentral.cat/
 [Biomarket]: https://www.mercabarna.es/sectors-activitat/biomarket/es_index/
 [La Magrana Vallesana]: https://lamagranavallesana.cat/
 [Economat Social]: https://leconomat.queviure.cat/es/
