--- a/content/articles/microblog/2019-09-05-053233-foodcoopbcn.md
+++ b/content/articles/microblog/2019-09-05-053233-foodcoopbcn.md
@@ -16,7 +16,8 @@ original:
   date: 2019-09-05 05:32:33+00:00
   link: https://foodcoopbcn.cat/es/conocenos/
 tags:
-- FoodCoop.cat
+- FoodCoop
+- supermercado cooperativo
 category: Alimentación, Supermercados
 location: España
 author: vokimon
