--- a/content/pages/404.md
+++ b/content/pages/404.md
@@ -2,7 +2,7 @@
 title: No se ha encontrado la página
 save_as: 404.html
 status: published
-template: 404
+template: '404'
 ---
 
 Lo sentimos, esa página no existe.
